fix: 필수과목만 조회되도록 변경